Fixed navbar items alignment

--- a/beautplayer/src/components/navbar/Navbar.module.scss
+++ b/beautplayer/src/components/navbar/Navbar.module.scss
@@ -14,6 +14,7 @@
    > * {
       display: block;
       padding: 1rem;
+      margin: auto;
    }
 
    // .left is unused
